Fixed background-repeat, email input place, smart contract, & join.. padding, image glow overflow, copyright padding

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,9 +58,7 @@
     --chart-5: 340 75% 55%;
   }
 }
-.sky {
-  background: url("/03-Sky 2.jpg");
-}
+
 .expanded .child-div {
   @apply h-36; /* Expanded height */
 }
@@ -82,74 +80,15 @@
   
   background-color: #EA764F;
   position: relative;
-  
- 
   font-size: 24px;
   /* Clip-path to create the custom shape */
   clip-path: polygon(30% 0 , 100% 0 , 100% 60%, 100% 100%, 0 100%, 0% 60%, 30% 60% );
   
 }
 
-/* World-map hover effect */
-.textWithBlurredBg {
-  width: 100%;
-  display: inline-block;
-  position: relative;
-  transition: all 0.2s ease-in; /* Transition-in duration */
-}
-.textWithBlurredBg img {
-  width: 100%;
-  height: 100%;
-  transition: all 0.9s ease-out; /* Longer transition-out duration */
-  border-radius: 4px;
-}
-.textWithBlurredBg:hover img {
-  filter: blur(10px) brightness(60%);
-
-}
-.textWithBlurredBg :not(img) {
-  font-size: 2vw;
-  position: absolute;
-  z-index: 1;
-  top: 20%;
-  width: 100%;
-  text-align: left;
-  padding-left: 5%;
-  padding-right: 10%;
-  color: #fff;
-  opacity: 0;
-  /* transition: 0.5s; */
-  transition: opacity 0.9s ease-out; /* Longer transition-out duration */
-}
-.textWithBlurredBg:hover :not(img) {
-  opacity: 1;
-}
-
-/* Footer height */
-.divHeightIncrese{
-  height: 70vh;
-}
-
-/* Arrow rotation in landing page */
-.linkedin .arrow1 {
-  transition: transform 0.5s ease; /* Apply the transition to both hover and non-hover states */
-}
-.linkedin:hover .arrow1 {
-  transform: rotate(45deg);
-  transition: transform 0.3s ease; /* You can also set a custom timing here */
-}
-.insta .arrow2 {
-  transition: transform 0.5s ease; /* Apply the transition to both hover and non-hover states */
-}
-.insta:hover .arrow2 {
-  transform: rotate(45deg);
-  transition: transform 0.5s ease; /* You can also set a custom timing here */
-}
-
 /* Glow effect in smart contract */
 .image-container {
   width: 80%;
-  height: 60%;
   display: block;
   border-radius: 20px; /* Optional, for rounded corners */
   /* Initial glow */
@@ -157,14 +96,12 @@
 }
 @keyframes pulse {
   0% {
-    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698)); 
-
+    filter: drop-shadow(30px 30px 30px rgba(164, 140, 190, 0.698)); 
   }
   50% {
-    filter: drop-shadow(80px 60px 120px rgba(192, 166, 219, 0.856)); 
-
+    filter: drop-shadow(30px 30px 120px rgba(192, 166, 219, 0.856)); 
   }
   100% {
-    filter: drop-shadow(80px 60px 50px rgba(164, 140, 190, 0.698)); 
+    filter: drop-shadow(30px 30px 30px rgba(164, 140, 190, 0.698)); 
   }
 }
